Fix overlapping image take-part show pages
• add max-width 100%

Re Task 41 https://www.pivotaltracker.com/story/show/65640954

--- a/app/assets/stylesheets/frontend/helpers/_dash-list.scss
+++ b/app/assets/stylesheets/frontend/helpers/_dash-list.scss
@@ -3,8 +3,7 @@
 
   li {
     list-style-position: inside;
-    padding-top: 0;
-    padding-right: $gutter-half;
+    padding: 0 $gutter-half 0 0;
 
     @media (min-width: 1px ){ // target modern browsers
       margin-left: $gutter-half;
